Funciona el cambiar password en el backend falta en el frontend

--- a/src/app/components/user-icon/user-icon.component.html
+++ b/src/app/components/user-icon/user-icon.component.html
@@ -7,6 +7,6 @@
             <a routerLink="/setting-page" class="flex justify-start items-center content-center pr-2 py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-gear px-2"></i>Ajustes</a>
             <a routerLink="" class="flex justify-start items-center content-center pr-2 py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-eye px-2"></i>Auditoría</a>
             <a routerLink="" class="flex justify-start items-center content-center pr-2 py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-repeat px-2"></i>Cambiar cuenta</a>
-            <a routerLink="/log-in" class="flex justify-start items-center content-center pr-2 py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-right-from-bracket px-2"></i>Salir</a>
+            <button type="button" (click)="logOut()" class="flex justify-start items-center content-center pr-2 py-2 hover:bg-lime-500 rounded"><i class="fa-solid fa-right-from-bracket px-2" ></i>Salir</button>
         </div>
 </div>
