--- a/src/app/pages/setting-module/password-page/password-page.component.html
+++ b/src/app/pages/setting-module/password-page/password-page.component.html
@@ -3,7 +3,7 @@
     <div class="flex flex-col w-full ml-10">
         <div class="titles flex spacing relative justify-center items-center pr-6">
             <p class="justify-center  m-2 ml-0 text-3xl my-6 font-medium drop-shadow-lg">Configuración de la cuenta</p>
-        <app-user-icon></app-user-icon>   
+        <app-user-icon></app-user-icon>
         </div>
         <!--Marco blanco-->
         <div class="flex flex-col justify center w-5/5 h-3/4 2xl:h-2/3 bg-white relative rounded-xl mr-10">
@@ -12,29 +12,43 @@
                 <p class="xl:text-xl 2xl:text-2xl font-bold text-center 2xl:m-9 xl:m-6">
                     Cambiar contraseña
                 </p>
+                <app-spinner *ngIf="loading"></app-spinner>
+                <form class="w-full" [formGroup]="changePassword" #changePa="ngForm" (ngSubmit)="changeP()">
                 <!--Primer bloque-->
                 <div class="flex flex-col justify-center items-center w-full mt-0 px-5">
                     <label class="flex justify-start items-center uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-1/2" for="grid-first-name">
                     Contraseña actual
                     </label>
-                    <input
+                    <input formControlName="inputCurrentPassword"
                     class="xl:text-sm xl:h-9 2xl:h-12 appearance-none w-1/2 bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
                     id="grid-first-name"
                     type="password"
                     placeholder="Ingrese la contraseña actual"
+                    [class.red-input]="this.changePassword.get('inputCurrentPassword')?.invalid && this.changePassword.get('inputCurrentPassword')?.touched"
                     />
+                    <span class="text-red-500 pl-5"
+                    *ngIf="changePassword.get('inputCurrentPassword')?.hasError('required') && changePassword.get('inputCurrentPassword')?.touched">
+                    Su contraseña actual <strong>es requerida</strong></span>
                 </div>
                 <!--Segundo bloque-->
                 <div class="flex flex-col justify-center items-center w-full 2xl:mt-10 mt-5 px-5">
                     <label class="flex justify-start items-center uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 w-1/2" for="grid-first-name">
                     Ingrese la nueva contraseña
                     </label>
-                    <input
+                    <input formControlName="inputNewPassword"
                     class="xl:text-sm xl:h-9 2xl:h-12 appearance-none w-1/2 bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
                     id="grid-first-name"
                     type="password"
                     placeholder="Ingrese la nueva contraseña"
+                    [class.red-input]="this.changePassword.get('inputNewPassword')?.invalid && this.changePassword.get('inputNewPassword')?.touched"
                     />
+                    <span class="text-red-500 pl-5"
+                    *ngIf="changePassword.get('inputNewPassword')?.hasError('required') && changePassword.get('inputNewPassword')?.touched">
+                    La nueva contraseña <strong> es requerida</strong></span>
+
+                    <span class="text-red-500 pl-5"
+                    *ngIf="changePassword.get('inputNewPassword')?.hasError('minlength') && changePassword.get('inputNewPassword')?.touched">La contraseña debe tener<strong> minimo 6 caracteres</strong></span>
+                    
                 </div>
                      <!--Tercer bloque-->
                 <div class="flex flex-col justify-center items-center w-full 2xl:mt-10 mt-5 px-5">
@@ -44,18 +58,22 @@
                       >
                       Repita la nueva contraseña
                     </label>
-                    <input
+                    <input formControlName="inputRepeatNewPassword"
                     class="xl:text-sm xl:h-9 2xl:h-12 appearance-none w-1/2 bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
                     id="grid-first-name"
                     type="password"
-                    placeholder="Repita la nueva contraseña"
+                    placeholder="Repita la nueva contraseña" [class.red-input]="this.changePassword.get('inputRepeatNewPassword')?.invalid && this.changePassword.get('inputRepeatNewPassword')?.touched"
                     />
+                    <span class="text-red-500 pl-5"
+                    *ngIf="changePassword.hasError('notSame')">
+                    Las contraseñas <strong>no coinciden</strong>
+                    </span>
                 </div>
                 <!--TERCER BLOQUE (BOTON DE EDITAR)-->
                 <div class=" flex justify-center items-center w-full h-12 2xl:mt-10 mt-5">
-                    <button class=" flex justify-center items-center 2xl:w-44 2xl:h-12 xl:w-40 xl:h-11 bg-lime-500 rounded-lg 2xl:text-md xl:text-sm text-white font-bold shadow-lg hover:bg-gray-500 py-2 2xl:px-4 xl:px-2 hover:scale-105 ease-in-out duration-300">Cambiar contraseña</button>
+                    <button type="submit" class=" flex justify-center items-center 2xl:w-44 2xl:h-12 xl:w-40 xl:h-11 bg-lime-500 rounded-lg 2xl:text-md xl:text-sm text-white font-bold shadow-lg hover:bg-gray-500 py-2 2xl:px-4 xl:px-2 hover:scale-105 ease-in-out duration-300" [disabled]="changePassword.invalid">Cambiar contraseña</button>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
