--- a/src/app/components/side-nav/side-nav.component.html
+++ b/src/app/components/side-nav/side-nav.component.html
@@ -1,7 +1,7 @@
 
 <div class="cursor-pointer min-h-screen w-48 object-contain space-y-12 xl:space-y-9 2xl:space-y-14 bg-white flex flex-col text-gray-700 drop-shadow-lg " >
   
-      <a routerLink="">
+      <a routerLink="/dashboard">
       <div class="logo w-full h-1/4 mt-5 p-3 flex space-x-4 drop-shadow-xl">
         <img src="../../../assets/img/invoice.png" class="w-12 h-12" alt="">  
         <div class="flex flex-col text-3xl  font-light  h-full">     
