--- a/src/app/pages/session-module/log-in/log-in.component.html
+++ b/src/app/pages/session-module/log-in/log-in.component.html
@@ -1,63 +1,131 @@
 <div class="flex containeres h-screen w-screen">
-    <!--Efecto blur y centralizacion  del modal-->
-    <div class="flex justify-center items-center w-full h-full _filter">
-        <!--Modal-->
-        <div class="flex w-4/6 h-4/5 2xl:text-lg xl:text-xs rounded-2xl">
-        <!--Lado izquierdo del modal (titulo de billFast Lite)-->
-        <div class="justify-center h-full w-1/2 rounded-l-2xl bg-lime-500 opacity-80">
-            <div class="h-full w-full bg-black/10 grid place-content-center rounded-l-2xl">
-                <h1 class="text-white text-4xl font-bold m">BillFast Lite</h1>
-              </div>
+  <!--Efecto blur y centralizacion  del modal-->
+  <div class="flex justify-center items-center w-full h-full _filter">
+    <!--Modal-->
+    <div class="flex w-4/6 h-4/5 2xl:text-lg xl:text-xs rounded-2xl">
+      <!--Lado izquierdo del modal (titulo de billFast Lite)-->
+      <div
+        class="justify-center h-full w-1/2 rounded-l-2xl bg-lime-500 opacity-80"
+      >
+        <div
+          class="h-full w-full bg-black/10 grid place-content-center rounded-l-2xl"
+        >
+          <h1 class="text-white text-4xl font-bold m">BillFast Lite</h1>
         </div>
-        <!--Lado derecho del modal (Formulario de registro-->
-        <div class="flex flex-col justify-center h-full w-1/2 rounded-r-2xl bg-stone-100 opacity-90">
-            <div class="flex flex-col w-full mb-6 px-3 items-center content-center">
-                <h1 class="text-gray-700 xl:text-2xl font-bold my-5">Inicia sesión</h1>
-                <p>¿No tienes una cuenta? <span class="font-bold text-gray-700"><a routerLink="/sign-up">Regístrate</a></span></p>
-                <app-spinner class="my-2" *ngIf="loading"></app-spinner>
-            </div>
-            <form [formGroup]="login" (ngSubmit)="log()" class="space-y-6 xl:space-y-3">        
-                <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-                <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
-                      Email
-                </label>
-                <input formControlName="inputUser" #AsInputUsuario id="InputUsuario" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus :bg-white focus:border-lime-500" id="grid-first-name" type="email" placeholder="Ingrese su correo" [class.red-input]="this.login.get('inputUser')?.invalid && this.login.get('inputUser')?.touched" />
-                <span class="text-red-500 ml-5"
-                *ngIf="login.get('inputUser')?.hasError('required') && login.get('inputUser')?.touched">
-                    El email <strong>es requerido</strong>
-                </span>
-                </div>
-    
-                <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-                <label class="block tracking-wide text-gray-700 text-md font-bold mb-2" for="grid-first-name">
-                    Contraseña: 
-                </label>
-                <input formControlName="inputPassword" #AsInputContrasena id="InputContrasena" class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500" id="grid-first-name" type="password" placeholder="Ingrese su contraseña" [class.red-input]="login.get('inputPassword')?.invalid && login.get('inputPassword')?.touched" />
-               <span class="text-red-500 ml-5" 
-               *ngIf="login.get('inputPassword')?.hasError('required') && login.get('inputPassword')?.touched">
-                La contraseña <strong> es requerida</strong>
-               </span>
-                </div>
-                
-            <div class=" flex justify-around w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
-                <label class="items-center flex tracking-wide text-gray-500 text-xs font-bold mb-3 mt-2">
-                    <input type="checkbox" placeholder="recuerdame" class="mx-2 cursor-pointer"> <p>Recuérdame</p>
-                </label>
-                
-                <label class="items-center tracking-wide text-gray-500 text-xs font-bold mb-3 mt-2">
-                    <a routerLink="/forgotpassword">¿Olvidaste tu contraseña?</a> 
-                </label>
-                
-            </div> 
-            <div class="flex justify-center items-center w-full">
-                <!-- <a [routerLink]="ruta">  -->
-                    <button class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500  text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3"
-                    [disabled]="login.invalid">
-                    Inicia sesión
-                    </button>
-                <!-- </a> -->
-            </div>
+      </div>
+      <!--Lado derecho del modal (Formulario de registro-->
+      <div
+        class="flex flex-col justify-center h-full w-1/2 rounded-r-2xl bg-stone-100 opacity-90"
+      >
+        <div class="flex flex-col w-full mb-6 px-3 items-center content-center">
+          <h1 class="text-gray-700 xl:text-2xl font-bold my-5">
+            Inicia sesión
+          </h1>
+          <p>
+            ¿No tienes una cuenta?
+            <span class="font-bold text-gray-700"
+              ><a routerLink="/sign-up">Regístrate</a></span
+            >
+          </p>
+          <app-spinner class="my-2" *ngIf="loading"></app-spinner>
+        </div>
+        <form
+          [formGroup]="login"
+          (ngSubmit)="log()"
+          class="space-y-6 xl:space-y-3"
+        >
+          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
+            <label
+              class="block tracking-wide text-gray-700 text-md font-bold mb-2"
+              for="grid-first-name"
+            >
+              Email
+            </label>
+            <input
+              formControlName="inputUser"
+              #AsInputUsuario
+              id="InputUsuario"
+              class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus :bg-white focus:border-lime-500"
+              id="grid-first-name"
+              type="email"
+              placeholder="Ingrese su correo"
+              [class.red-input]="
+                this.login.get('inputUser')?.invalid &&
+                this.login.get('inputUser')?.touched
+              "
+            />
+            <span
+              class="text-red-500 ml-5"
+              *ngIf="
+                login.get('inputUser')?.hasError('required') &&
+                login.get('inputUser')?.touched
+              "
+            >
+              El email <strong>es requerido</strong>
+            </span>
+          </div>
+
+          <div class="w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
+            <label
+              class="block tracking-wide text-gray-700 text-md font-bold mb-2"
+              for="grid-first-name"
+            >
+              Contraseña:
+            </label>
+            <input
+              formControlName="inputPassword"
+              #AsInputContrasena
+              id="InputContrasena"
+              class="xl:text-sm xl:h-9 appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-lime-500"
+              id="grid-first-name"
+              type="password"
+              placeholder="Ingrese su contraseña"
+              [class.red-input]="
+                login.get('inputPassword')?.invalid &&
+                login.get('inputPassword')?.touched
+              "
+            />
+            <span
+              class="text-red-500 ml-5"
+              *ngIf="
+                login.get('inputPassword')?.hasError('required') &&
+                login.get('inputPassword')?.touched
+              "
+            >
+              La contraseña <strong> es requerida</strong>
+            </span>
+          </div>
+
+          <div class="flex justify-around w-full 2xl:mb-2 xl:mb-0 px-3 mb-6">
+            <label
+              class="items-center flex tracking-wide text-gray-500 text-xs font-bold mb-3 mt-2"
+            >
+              <input
+                type="checkbox"
+                placeholder="recuerdame"
+                class="mx-2 cursor-pointer"
+              />
+              <p>Recuérdame</p>
+            </label>
+
+            <label
+              class="items-center tracking-wide text-gray-500 text-xs font-bold mb-3 mt-2"
+            >
+              <a routerLink="/forgotpassword">¿Olvidaste tu contraseña?</a>
+            </label>
+          </div>
+          <div class="flex justify-center items-center w-full">
+            <!-- <a [routerLink]="ruta">  -->
+            <a
+              href="/home"
+              class="justify-center content-center items-center bg-lime-500 2xl:h-12 xl:h-10 p-4 rounded-xl shadow-lg hover:bg-gray-500 text-white font-bold py-2 hover:scale-105 ease-in-out duration-300 m-3"
+            >
+              Enter Home
+            </a>
+            <!-- </a> -->
+          </div>
         </form>
-            </div>
-        </div> 
+      </div>
+    </div>
+  </div>
 </div>
